--- a/app/views/user_assets/show.html.erb
+++ b/app/views/user_assets/show.html.erb
@@ -1,4 +1,9 @@
 <div>
   <h1 class="font-bold text-4xl">UserAssets#show</h1>
   <p>Find me in app/views/user_assets/show.html.erb</p>
+
+
+  <p><%= @user_asset.title %></p>
+  <p><%= @user_asset.amount %></p>
+  <p><%= @user_asset.description %></p>
 </div>
