--- a/app/views/user_assets/edit.html.erb
+++ b/app/views/user_assets/edit.html.erb
@@ -2,3 +2,7 @@
   <h1 class="font-bold text-4xl">UserAssets#edit</h1>
   <p>Find me in app/views/user_assets/edit.html.erb</p>
 </div>
+
+<%= render 'form', user_asset: @user_asset %>
+
+<%= button_to 'Delete', user_asset_path(@user_asset), method: :delete, data: {turbo_confirm: "Sure?"}, remote: true %>
