--- a/app/views/user_assets/new.html.erb
+++ b/app/views/user_assets/new.html.erb
@@ -2,3 +2,5 @@
   <h1 class="font-bold text-4xl">UserAssets#new</h1>
   <p>Find me in app/views/user_assets/new.html.erb</p>
 </div>
+
+  <%= render 'form', user_asset: @user_asset %>
