--- a/app/views/user_assets/edit.html.erb
+++ b/app/views/user_assets/edit.html.erb
@@ -5,4 +5,7 @@
 
 <%= render 'form', user_asset: @user_asset %>
 
-<%= button_to 'Delete', user_asset_path(@user_asset), method: :delete, data: {turbo_confirm: "Sure?"}, remote: true, class: 'bg-red-100 px-4 py-2 rounded' %>
+<%= link_to "Destroy", user_asset_path(@user_asset), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %>
