--- a/app/views/user_assets/index.html.erb
+++ b/app/views/user_assets/index.html.erb
@@ -2,3 +2,15 @@
   <h1 class="font-bold text-4xl">UserAssets#index</h1>
   <p>Find me in app/views/user_assets/index.html.erb</p>
 </div>
+
+<ul>
+  <% @user_assets.each do |asset| %>
+    <li>
+      <%= asset.title %>
+      <%= asset.amount %>
+      <%= asset.description %>
+    </li>
+  <% end %>
+</ul>
+
+<%= button_to "New Asset", new_user_asset_path %>
