--- a/app/views/user_assets/index.html.erb
+++ b/app/views/user_assets/index.html.erb
@@ -1,16 +1,21 @@
 <div>
-  <h1 class="font-bold text-4xl">UserAssets#index</h1>
-  <p>Find me in app/views/user_assets/index.html.erb</p>
+  <h1 class="font-bold text-4xl px-2">UserAssets#index</h1>
 </div>
 
 <ul>
-  <% @user_assets.each do |asset| %>
+  <% @user_assets.sort_by(&:id).each do |asset| %>
     <li>
       <%= asset.title %>
       <%= asset.amount %>
       <%= asset.description %>
+      <%= link_to "Edit", edit_user_asset_path(asset) %>
     </li>
   <% end %>
 </ul>
 
-<%= button_to "New Asset", new_user_asset_path %>
+<%= link_to "New Asset", new_user_asset_path %>
+
+<div>
+  <h2>Total Assets</h2>
+  <p><%= total_user_assets %></p>
+</div>
